# Game-Contra-Diction

./: CMakeLists.txt  README.md
Assets/Levels/Level1/: Level1.csv  Level1.tmx  Level1.tsx
Assets/Levels/Level1ContraDiction/: Level1.tmj  Level1.tmx  Level1.tsx  NaveQuebrada.tsx  vegetation-1-alt-2.tsx
Assets/Levels/Level2ContraDiction/: Level2.tiled-session  Level2.tmj  Level2.tmx  Level2_Auto.tmj  Level2_City_Generated.tmj  NaveQuebrada.tsx  SCS_Building_01_Blue_Nighttime_01.tsx  SCS_Building_03_Daytime_01.tsx  SCS_Building_04_Blue_Nighttime_01.tsx
Assets/Levels/Level3ContraDiction/: Level3.csv  Level3.tmj  Level3.tmx
Assets/Sprites/AlienKid/: alien_child_death_animation_default.json  alien_child_idle_default.json  alien_child_running_default.json  alien_child_walk_default.json
Assets/Sprites/AlienMan/: casual_alien_guy_death_default.json  casual_alien_guy_idle_default.json  casual_alien_guy_idle_side_idle_walking.json  casual_alien_guy_running_default.json  casual_alien_guy_walking_walking_pace.json
Assets/Sprites/AlienWoman/: a_alien_woman_death_animation_default.json  a_alien_woman_idle_default.json  a_alien_woman_running_default.json  a_alien_woman_walk_default.json
Assets/Sprites/Blocks/: Assets.json  Blocks.json
Assets/Sprites/Cenario/: Vegetation.cpp  Vegetation.h
Assets/Sprites/Collectables/: Collectables.json
Assets/Sprites/FinalFlower/: a_mini_bee_flying_on_a_flower_dancing_fower_default.json  a_mini_bee_flying_on_a_flower_death_default.json
Assets/Sprites/FlowerBoss-ContraDiction/a_plant_alien_crouching_crouching128x128/: a_plant_alien_crouching_crouching128x128.json
Assets/Sprites/FlowerBoss-ContraDiction/a_plant_alien_flying_flying128x128/: a_plant_alien_flying_flying128x128.json
Assets/Sprites/FlowerBoss-ContraDiction/a_plant_alien_growing_growing128x128/: a_plant_alien_growing_growing128x128.json
Assets/Sprites/FlowerBoss-ContraDiction/a_plant_alien_kicking_kicking128x128/: a_plant_alien_kicking_kicking128x128.json
Assets/Sprites/FlowerBoss-ContraDiction/a_plant_alien_punching_punching-1-128x128/: a_plant_alien_punching_punching-1-128x128.json
Assets/Sprites/FlowerBoss-ContraDiction/a_plant_alien_punching_punching-2-128x128/: a_plant_alien_punching_punching-2-128x128.json
Assets/Sprites/FlowerBoss-ContraDiction/a_plant_alien_walking_walking128x128/: a_plant_alien_walking_walking128x128.json
Assets/Sprites/InputButtons-ContraDiction/: keyboard_keys.json
Assets/Sprites/ManInBlack/: worker_alien_running_running.json  worker_alien_showing_credentials_default.json  worker_alien_walk_default.json
Assets/Sprites/MenuButtons-ContraDiction/: LICENSE.txt  README.txt
Assets/Sprites/MenuButtons-ContraDiction/Sources_PXO/Large/: empty_large_hover.pxo  empty_large_pressed.pxo  empty_largenormal.pxo  options_hover.pxo  options_normal.pxo  options_pressed.pxo  settings_hover.pxo  settings_normal.pxo  settings_pressed.pxo
Assets/Sprites/MenuButtons-ContraDiction/Sources_PXO/Medium/: back_hover.pxo  back_normal.pxo  back_pressed.pxo  empty_medium_hover.pxo  empty_medium_normal.pxo  empty_medium_pressed.pxo  exit_hover.pxo  exit_normal.pxo  exit_pressed.pxo  next_hover.pxo  next_normal.pxo  next_pressed.pxo  play_hover.pxo  play_normal.pxo  play_pressed.pxo  quit_hover.pxo  quit_normal.pxo  quit_pressed.pxo  retry_hover.pxo  retry_normal.pxo  retry_pressed.pxo  start_hover.pxo  start_normal.pxo  start_pressed.pxo
Assets/Sprites/Policeman-ContraDiction/: enemy_generic_alien_soldier_attack_punch.json  enemy_generic_alien_soldier_attack_shooting.json  enemy_generic_alien_soldier_idle_idle.json  enemy_generic_alien_soldier_idle_idlewalk.json  enemy_generic_alien_soldier_walk_walk.json
Assets/Sprites/Soldier/: generic_alien_soldier_attack_default.json  generic_alien_soldier_jump_default.json  generic_alien_soldier_shapeshifting_default.json  generic_alien_soldier_walk_default.json
Assets/Sprites/Spaceman-ContraDiction/: space_dandy_arm_spritesheet.json  space_dandy_combined.json  space_dandy_crouch_walking_crouch_walking.json  space_dandy_crouching_crouching.json  space_dandy_dancing_dancing.json  space_dandy_death_default.json  space_dandy_side_jump_jumpeconomic.json  space_dandy_side_jump_no_weapon.json  space_dandy_walk_walking128x128.json
Shaders/: Base.frag  Base.vert  Light.frag  Light.vert
Source/: AudioSystem.cpp  AudioSystem.h  CSV.h  Game.cpp  Game.h  Inventory.h  Json.h  Main.cpp  Math.h
Source/Actors/: Actor.cpp  Actor.h  AlienKid.cpp  AlienKid.h  AlienMan.cpp  AlienMan.h  AlienWoman.cpp  AlienWoman.h  Block.cpp  Block.h  CactusPillar.cpp  CactusPillar.h  CactusProjectile.cpp  CactusProjectile.h  Coin.cpp  Coin.h  EndPhaseTrigger.cpp  EndPhaseTrigger.h  EnemyLaser.cpp  EnemyLaser.h  FinalFlower.cpp  FinalFlower.h  FlowerBoss.cpp  FlowerBoss.h  GasCloud.cpp  GasCloud.h  Goomba.cpp  Goomba.h  Grass.cpp  Grass.h  Hazard.cpp  Hazard.h  Laser.cpp  Laser.h  LevelEndActor.cpp  LevelEndActor.h  Mario.cpp  Mario.h  Mushroom.cpp  Mushroom.h  (+29 more)
Source/Components/: Component.cpp  Component.h  HealthBarComponent.cpp  HealthBarComponent.h  ParticleSystemComponent.cpp  ParticleSystemComponent.h
Source/Components/Drawing/: AnimatorComponent.cpp  AnimatorComponent.h  DrawComponent.cpp  DrawComponent.h  RectComponent.cpp  RectComponent.h  SpriteComponent.cpp  SpriteComponent.h  TutorialDrawComponent.cpp  TutorialDrawComponent.h
Source/Components/Physics/: AABBColliderComponent.cpp  AABBColliderComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Source/UI/: HUD.cpp  HUD.h  UIButton.cpp  UIButton.h  UIImage.cpp  UIImage.h  UIRect.cpp  UIText.cpp
Source/UI/Screens/: CutsceneScreen.cpp  CutsceneScreen.h  GameOver.cpp  GameOver.h  InventoryScreen.cpp  InventoryScreen.h  LoadingScreen.cpp  LoadingScreen.h  MainMenu.cpp  MainMenu.h  OptionsScreen.cpp  OptionsScreen.h  PauseMenu.cpp  PauseMenu.h  StageSelect.cpp  StageSelect.h  UIScreen.cpp  UIScreen.h
(+12 files in other folders)
